--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,1 @@
-<div class="frontend">
-  <app-header></app-header>
-  <div class="frontend-container">
-    <app-slider></app-slider>
-    <main>
-      <app-news></app-news>
-    </main>
-    <app-footer></app-footer>
-  </div>
-</div>
+<app-main></app-main>
