Scroll top update.

--- a/src/app/template/footer/footer.component.html
+++ b/src/app/template/footer/footer.component.html
@@ -4,8 +4,8 @@
       <img src="assets/image/footer-logo.png" alt="">
     </div>
     <div class="footer-blog-text">
-      <p>Copyright©2007-2019 Blog Inc.</p>
-      <p>Copyright©2007-2019 Blog Inc.</p>
+      <p>これは、印刷および植字業界の単なるダ</p>
+      <p>ミーテキストです これは、印刷および</p>
     </div>
   </div>
   <div class="footer-copyright">
