--- a/src/app/template/header/header.component.scss
+++ b/src/app/template/header/header.component.scss
@@ -28,6 +28,10 @@
       text-transform: uppercase;
       letter-spacing: 3px;
     }
+
+    li a:hover {
+      cursor: pointer;
+    }
   }
 
   &-nav img{
