--- a/src/app/template/main/main.component.scss
+++ b/src/app/template/main/main.component.scss
@@ -4,4 +4,21 @@
   &-container {
     padding: 0px 18px 0px 18px;
   }
+
+  &-scroll-arrow {
+    position: absolute;
+    font-size: 35px;
+    top: 11px;
+    right: 18px;
+  }
+
+  &-scroll-top {
+    position: fixed;
+    background:#f1eded;
+    bottom: 89px;
+    right: 122px;
+    cursor: pointer;
+    padding: 15px 12px 15px 12px;
+    text-align: center;
+  }
 }
