--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
+
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0px !important;
   font-family: 'Lato', sans-serif;
