--- a/src/app/template/slider/slider.component.scss
+++ b/src/app/template/slider/slider.component.scss
@@ -24,9 +24,9 @@ img {
   width: auto;
   padding: 16px;
   margin-top: -22px;
-  color: white;
+  color: #0a0a0a;
   font-weight: bold;
-  font-size: 30px;
+  font-size: 31px;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
@@ -40,7 +40,7 @@ img {
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+  background-color: #f2f2f2;
 }
 
 /* Caption text */
@@ -50,11 +50,14 @@ img {
   padding: 8px 12px;
   position: absolute;
   bottom: 8px;
-  width: 100%;
+  width: 40%;
+  left: 68%;
+  top: 27%;
 }
 
 .text h2 {
-  float: right;
+  margin-right: 3em;
+  font-size: 3em;
 }
 
 /* Number text (1/3 etc) */
@@ -72,7 +75,7 @@ img {
   height: 15px;
   width: 15px;
   margin: 0 2px;
-  background-color: rgb(143, 132, 132);
+  background-color: rgb(10, 10, 10);
   border-radius: 50%;
   display: inline-block;
 }
@@ -83,7 +86,7 @@ img {
 }
 
 .active, .dot:hover {
-  background-color: #030303;
+  background-color: #717171;
 }
 
 /* Fading animation */
@@ -92,6 +95,10 @@ img {
   -webkit-animation-duration: 1.5s;
   animation-name: fade;
   animation-duration: 1.5s;
+}
+
+.slide-text {
+  background-color: #0a0a0a;
 }
 
 @-webkit-keyframes fade {
