--- a/src/app/template/form/form.component.scss
+++ b/src/app/template/form/form.component.scss
@@ -4,7 +4,8 @@ label {
 }
 
 .form {
-  padding: 0px 450px 0px 450px;
+  max-width: 350px;
+  margin: auto;;
 
   &-btn {
     width: 100%;
@@ -39,6 +40,7 @@ label {
 
 .form h2{
   text-transform: uppercase;
+  letter-spacing: 3px;
 }
 
 input {
