--- a/src/app/template/news/news.component.scss
+++ b/src/app/template/news/news.component.scss
@@ -7,6 +7,7 @@
     grid-column-gap: 20px;
     grid-row-gap: 25px;;
     padding: 5px 16px;
+    margin: auto;
   }
 
   &-item {
@@ -43,6 +44,11 @@
     margin: -50px 0px 42px 30px;
   }
 
+  &-title a{
+    color: black;
+    text-decoration: underline;
+  }
+
   &-button {
     border: none;
     color: white;
@@ -62,5 +68,10 @@
     text-align: center;
     margin-top: 50px;
   }
+}
 
+.new-post {
+  float: right;
+  margin-top: -55px;
+  margin-right: 32px;
 }
